<resources>
    <string name="app_name">Free GB Prank</string>
    <string name="congratulation_paragraph_1">We\'re verifying availability of your selected plan..</string>
    <string name="congratulation_paragraph_2">This usually takes between 5 minutes and an hour, but can sometimes take up to 24 hours. Please check back later.</string>
    <string name="congratulation_paragraph_3">If you have any query, please send us an email:</string>
    <string name="developer_mail">prankjust4u@gmail.com</string>
    <string name="congratulation">Congratulation</string>
    <string name="go_to_home">Go to Home</string>
    <string name="_20gb">20GB</string>
    <string name="_40gb">40GB</string>
    <string name="_60gb">60GB</string>
    <string name="_80gb">80GB</string>
    <string name="enter_your_offer">Enter Your Offer</string>
    <string name="facebook">Facebook</string>
    <string name="tick_tok">Tick-tok</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="instagram">Instagram</string>
    <string name="select_an_option">Select An Option</string>
    <string name="enter_your_name_in_the_box">Enter your name in the box</string>
    <string name="next">Next</string>

    <string name="processing">Processing... Please Wait</string>
    <string name="processing_info">Instructions will be given to you on how to <strong>Activate</strong> your <strong>Bundle</strong> after your request has been duly processed!</string>
    <string name="estimated_time">Time remaining : </string>
    <string name="reward">Reward</string>

    <string name="result_header">Activation Failed!</string>
    <string name="result_body">Your network carrier is not currently supported. TRY AGAIN with a different carrier</string>
    <string name="result_hint">Hint: Use the most popular carrier in your region</string>
    <string name="network_error">No Connection Available!</string>

    <string name="intro_message">Click the GIFT icon to receive bundle</string>
    <string name="admob_app_id">ca-app-pub-3112561146803951~9958925196</string>

    <string name="admob_banner_test_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_test_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="screen_main_banner">ca-app-pub-3112561146803951/6288887894</string>
    <string name="screen_one_shot_banner">ca-app-pub-3112561146803951/3850766121</string>
    <string name="screen_special_banner">ca-app-pub-3112561146803951/8040953262</string>

    <string name="interstitial_id">ca-app-pub-3112561146803951/1429698485</string>
</resources>