<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/banner_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/include7"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_an_option"
            android:textAppearance="@style/CustomHeaderTextAppearance"
            android:textColor="@color/screen_header_text_color"
            android:textSize="@dimen/screen_header_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/include7"
            app:layout_constraintVertical_bias="0.060000002" />

        <Button
            android:id="@+id/button2"
            style="@style/CustomOptionButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sixth_screen_button_height"
            android:layout_marginTop="32dp"
            android:text="@string/instagram"
            app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button3"
            style="@style/CustomOptionButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sixth_screen_button_height"
            android:layout_marginTop="32dp"
            android:text="@string/whatsapp"
            app:layout_constraintEnd_toEndOf="@+id/button4"
            app:layout_constraintStart_toStartOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button4"
            style="@style/CustomOptionButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sixth_screen_button_height"
            android:layout_marginTop="32dp"
            android:text="@string/tick_tok"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button"
            style="@style/CustomOptionButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/sixth_screen_button_height"
            android:text="@string/facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.100000024" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@id/banner_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="@color/colorPrimary"
        tools:layout_height="40dp" />
</androidx.constraintlayout.widget.ConstraintLayout>